tests/fixtures/LatestTests/VariableDeclarationTests/errors/int32_to_int8.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:int8 = 1000

